Fixed sidebar wrapping on desktop resolutions.

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ body {
 }
 
 .gridContainer__sidebar {
-	width: 368px;
+	width: 370px;
 	background-color: var(--accent-a1);
 	border: 1px solid var(--gray-a2);
 	box-shadow:
